src/objects/Opp_Snapshot__c.object
<CustomObject>
    <description>Contains the reporting snapshot data for Opportunities.</description>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <label>Account Billing State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Models__c</fullName>
        <label>Pricing Models</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Lead</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Prospecting (AM)</fullName>
                </value>
                <value>
                    <fullName>Product Introduction (AM)</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Proposal (AM)</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>Negotiation (AM)</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Contracting (AM)</fullName>
                </value>
                <value>
                    <fullName>Product Commit (AM)</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                    <isActive>false</isActive>
                    <label>Discovery</label>
                </value>
                <value>
                    <fullName>Product Introduction</fullName>
                    <isActive>false</isActive>
                    <label>Product Introduction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opp Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opp Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>